// Vitest Snapshot v1

exports[`Dialog component > opens the popover once trigger is clicked 1`] = `
<div
  aria-describedby="radix-5"
  aria-label="Dialog"
  aria-labelledby="radix-4"
  class="c-ixewiD c-ixewiD-lgqbzh-size-sm"
  data-state="open"
  id="radix-3"
  role="dialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <button
    aria-label="Close dialog"
    class="c-fDzwZw c-fDzwZw-PrXKS-size-lg c-fDzwZw-otpKd-cv c-fDzwZw-ikHqHwu-css"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c-dbrbZt c-dbrbZt-hemXWm-size-md c-dbrbZt-ihFPSGE-css"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.343 6.343l11.314 11.314m-11.314 0L17.657 6.343"
      />
    </svg>
  </button>
  CONTENT
</div>
`;

exports[`Dialog component > renders the trigger with the popover hidden by default 1`] = `
<div>
  <button
    aria-controls="radix-0"
    aria-expanded="false"
    aria-haspopup="dialog"
    data-state="closed"
    type="button"
  >
    TRIGGER
  </button>
</div>
`;

exports[`Dialog component with custom background > renders 1`] = `
<div
  class="c-gJNIBC"
  data-state="open"
  id="modal_overlay"
  style="pointer-events: auto;"
>
  <div
    aria-hidden="true"
    class="c-PJLV c-kNieLL"
    data-aria-hidden="true"
  >
    CUSTOM BACKGROUND
  </div>
  <div
    aria-describedby="radix-20"
    aria-label="Dialog"
    aria-labelledby="radix-19"
    class="c-ixewiD c-ixewiD-lgqbzh-size-sm"
    data-state="open"
    id="radix-18"
    role="dialog"
    style="pointer-events: auto;"
    tabindex="-1"
  >
    <button
      aria-label="Close dialog"
      class="c-fDzwZw c-fDzwZw-PrXKS-size-lg c-fDzwZw-otpKd-cv c-fDzwZw-ikHqHwu-css"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="c-dbrbZt c-dbrbZt-hemXWm-size-md c-dbrbZt-ihFPSGE-css"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.343 6.343l11.314 11.314m-11.314 0L17.657 6.343"
        />
      </svg>
    </button>
    CONTENT
  </div>
</div>
`;

exports[`Dialog component without close button > renders 1`] = `
<div
  aria-describedby="radix-17"
  aria-label="Dialog"
  aria-labelledby="radix-16"
  class="c-ixewiD c-ixewiD-lgqbzh-size-sm"
  data-state="open"
  id="radix-15"
  role="dialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  CONTENT
</div>
`;
